# HEIMDALL

./: .gitignore  CLASSIFICADOR.xlsx  README.md  pyproject.toml  requirements.txt
data/: cidades.csv
migracao/: __init__.py  __main__.py  baselines.py  calibra.py  cities.py  cli.py  engine.py  metrics.py  params.py  plots.py  sensitivity.py
tests/: conftest.py  test_baselines.py  test_calibra.py  test_congestao.py  test_conservacao.py  test_liquidez.py  test_logit.py  test_metrics_e_dados.py  test_monotonicidade.py  test_path_dependence.py  test_sensitivity_cli.py
